✨ feat: add admin system resource dashboard (#144)
